--- a/inkyremote.service
+++ b/inkyremote.service
@@ -9,7 +9,7 @@ Type=simple
 User=jweinhart
 Group=jweinhart
 WorkingDirectory=/home/jweinhart/inkyremote
-ExecStart=/home/jweinhart/.virtualenvs/pimoroni/bin/python inkyremote.py
+ExecStart=/home/jweinhart/inkyremote/start_inkyremote.sh
 Restart=always
 RestartSec=10
 TimeoutStartSec=60
@@ -20,13 +20,15 @@ KillSignal=SIGTERM
 Environment=PATH=/home/jweinhart/.virtualenvs/pimoroni/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 Environment=PYTHONPATH=/home/jweinhart/inkyremote
 Environment=PYTHONUNBUFFERED=1
+Environment=HOME=/home/jweinhart
+Environment=USER=jweinhart
 
-# Security settings
-NoNewPrivileges=true
-ProtectSystem=strict
-ProtectHome=true
+# Security settings (relaxed for GPIO access)
+NoNewPrivileges=false
+#ProtectSystem=strict
+#ProtectHome=true
 ReadWritePaths=/home/jweinhart/inkyremote
-PrivateTmp=true
+#PrivateTmp=true
 
 # Allow access to GPIO and network interfaces
 SupplementaryGroups=gpio spi i2c netdev
